# AI_Agent_Hackathon_with_Google_Cloud_3rd

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  README.md
backend/: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  Dockerfile.production  Dockerfile.schema-fix  Dockerfile.simple  README.md  __init__.py  add_firebase_uid.sql  add_missing_columns.sql  alembic.ini  benchmark_results_20250907_144257.json  check_migrations.py  cloudbuild-production.yaml  cloudbuild.yaml  complete-schema-fix-job.yaml  complete_schema_fix.sql  comprehensive-schema-fix-job.yaml  comprehensive_schema_fix.sql  create_complete_schema.sql  create_hitl_tables.sql  create_users_tables.sql  deploy-optimized.sh  deploy-production.sh  deploy-secure-production.sh  deploy.sh  deployment_status.md  dev_manga.db  docker-compose.yml  e2e_test_manga_generation.py  e2e_test_results.json  final_system_status_report.md  fix_hitl_tables.sql  fix_request_id_column.sql  fix_request_id_direct.sql  fix_request_id_schema.sql  init_db.py  main.py  (+39 more)
backend/agents/: base_agent.py  phase1_text_analysis.py  phase2_story_structure.py
backend/alembic/: Dockerfile  env.py
backend/api/: comic_generation.py
backend/app/: __init__.py  main.py  pytest.ini
backend/claudedocs/: Firebase_Authentication_Design_Compliance_Analysis.md  Firebase_Authentication_Implementation_Complete.md  User_Model_Extension_Completion_Report.md  backend_compliance_analysis.md  backend_design_compliance_analysis.md  backend_improvement_proposal.md  compliance_verification_report.md  comprehensive_cleanup_report.md  (+2 more)
(+704 files in other folders)
